--- a/page1.html
+++ b/page1.html
@@ -6,12 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roth is Rad</title>
  <link rel="stylesheet" href="main.css">
- <style>
-   #para{
-     text-align: left;
-	width:70%
-   }
- </style>
+<style>
+</style>
  </head>
 <body>
     <!--Menu Bar-->
@@ -27,7 +23,7 @@
     <h1><u><center>Famous water polo players (BOYS)</h1></u></center>
     <h2><u>Tony Azevedo</u></h2>
     
-<p id="para">Anthony Lawrence Azevedo is a American-Brazilian water polo player player. He is a 2008 Olympic silver medalist and a five-time olympian. His nickname is 'The savior' and he is considered to be one of the best water polo in recent memory.Tony Azevedo was born in Rio de Janeiro, but his family moved to California when he was 1 month old. His mother is American and his father is the Brazilian Ricardo Azevedo, a former Olympic water polo player. When he was four, Azevedo suffered a fall that severed his trachea and esophagus. Although his heart stopped beating on the operating table for a period of four minutes before doctors were able to revive him, he made a complete recovery and went on to excel in water polo, a strenuous sport. He is 1.85 m (6 ft) and weighs 91 kg (200 lbs).<br>
+<p id="para">Anthony Lawrence Azevedo is a <b><u>American-Brazilian water polo player player</u></b>. He is a 2008 Olympic silver medalist and a five-time olympian. His nickname is 'The savior' and he is considered to be one of the best water polo in recent memory.Tony Azevedo was born in <b><u>Rio de Janeiro</u></b>, but his family moved to California when he was 1 month old. His mother is American and his father is the Brazilian Ricardo Azevedo, a former Olympic water polo player. When he was four, Azevedo suffered a fall that severed his trachea and esophagus. Although his heart stopped beating on the operating table for a period of four minutes before doctors were able to revive him, he made a complete recovery and went on to excel in water polo, a strenuous sport.<b><u> He is 1.85 m (6 ft) and weighs 91 kg (200 lbs).</u></b><br>
 <img src="https://www.teamusa.org/-/media/TeamUSA/WaterPolo/Azevedo_Tony/Azevedo_Tony_072213_800x375.jpg?la=en&hash=A40B8178F223C221C9FC1A3D9585A0C3E5B40082"height="280px" width="400px" style="margin-right:auto;">
 <img src="https://c8.alamy.com/comp/CPWNDF/american-olympic-water-polo-player-tony-azevedo-at-team-usa-media-CPWNDF.jpg"height="280px" width="400px" style="margin-right:auto;"s><br><br>
 <h2><u>Johnny Weissmuller</u></h2>
